final-devops-project/kubernetes/06-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskboard
  namespace: taskboard
  labels:
    app: taskboard
spec:
  selector:
    app: taskboard
  ports:
    - name: http
      port: 80
      targetPort: 3000
